:art: Make parameters function more like nf-core

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,16 +1,119 @@
-import java.time.*
-Date now = new Date()
+/*
+====================================================================================
 
+    MillironX/jev-analysis-pipeline Nextflow config file
+
+====================================================================================
+
+    Default config options for all compute environments
+
+------------------------------------------------------------------------------------
+*/
+
+// Process metadata
 manifest {
+    name              = 'MillironX/jev-analysis-pipeline'
+    author            = 'Thomas A. Christensen II'
+    homePage          = 'https://github.com/MillironX/jev-analysis-pipeline'
+    description       = 'Intra-sample viral population analysis targeted at Japanese Encephalitis'
+    mainScript        = 'main.nf'
+    nextflowVerion    = '!>=21.04.0'
+    version           = '0.0.1'
     recurseSubmodules = true
 }
 
-process {
-    // All-process defaults
-    errorStrategy = 'ignore'
 
-    // Per-process container environments
-    // Listed alphabetical, by the tool suite's name
+// Configuration profiles for
+profiles {
+    debug { process.beforeScript = 'echo $HOSTNAME' }
+    docker {
+        docker.enabled         = true
+        docker.userEmulation   = true
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+    }
+    singularity {
+        singularity.enabled    = true
+        singularity.autoMounts = true
+        docker.enabled         = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+    }
+    podman {
+        podman.enabled         = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+    }
+}
+
+
+// Global default parameters
+params {
+
+    // Input options
+    input          = '.'
+    platform       = null
+    pe             = false
+    ont            = false
+
+    // Reference genome options
+    genome         = 'NC_001437.1' // JEV RefSeq
+
+    // Kraken 2 options
+    kraken2_db     = null
+    keep_taxid     = '0 10239' // 0 = Unclassified, 10239 = Viral
+
+    // Read trimming options (shared)
+    trim_minlen      = 100
+
+    // Illumina trimming options (Trimmomatic)
+    trim_adapters    = 'NexteraPE-PE.fa'
+    trim_mismatches  = 2
+    trim_pclip       = 30
+    trim_clip        = 10
+    trim_winsize     = 50
+    trim_winqual     = 15
+    trim_leading     = 15
+    trim_trailing    = 15
+    trim_crop        = 0
+    trim_headcrop    = 0
+
+    // ONT-specific trimming options (Filtlong)
+    trim_keep_percent = 90
+    trim_target_bases = 500000000
+
+    // Boilerplate options
+    outdir           = './results'
+    tracedir         = "${params.outdir}/.trace"
+    publish_dir_mode = 'copy'
+    help             = false
+
+    // Max resource options
+    // Defaults only, expecting to be overwritten
+    max_memory                   = '750.GB'
+    max_cpus                     = 72
+    max_time                     = '240.h'
+}
+
+// Set the platform flags correctly
+if ( params.platform.toLowerCase() == 'ont' || params.platform.toLowerCase() =='nanopore' ) {
+    params.pe  = false
+    params.ont = true
+}
+else if ( params.platform.toLowerCase() == 'pe' || params.platform.toLowerCase() == 'illumina' ) {
+    params.pe  = true
+    params.ont = false
+}
+
+
+process {
+// Per-process container environments
+// Listed alphabetical, by the tool suite's name
     withLabel: bam_readcount {
         container = 'docker.io/mgibio/bam-readcount:latest'
     }
@@ -30,16 +133,13 @@ process {
         container = 'quay.io/staphb/ivar:1.3'
     }
     withLabel: julia {
-        errorStrategy = 'retry'
-        maxRetries = 2
-        conda = 'conda-forge::julia=1.6.2'
+        conda     = 'conda-forge::julia=1.6.2'
     }
     withLabel: kraken {
         container = 'quay.io/staphb/kraken2:2.1.2-no-db'
-        memory = '100 GB'
     }
     withLabel: krakentools {
-        conda = 'bioconda::krakentools=1.2'
+        conda     = 'bioconda::krakentools=1.2'
     }
     withLabel: mafft {
         container = 'quay.io/staphb/mafft:7.475'
@@ -54,7 +154,7 @@ process {
         container = 'quay.io/staphb/samtools:1.12'
     }
     withLabel: seqret {
-        conda = 'bioconda::emboss=6.6.0'
+        conda     = 'bioconda::emboss=6.6.0'
     }
     withLabel: spades {
         container = 'quay.io/staphb/spades:3.15.2'
@@ -62,60 +162,62 @@ process {
     withLabel: trimmomatic {
         container = 'quay.io/staphb/trimmomatic:0.39'
     }
+
+    withLabel: run_local {
+        executor = 'local'
+    }
 }
 
-singularity {
-    enabled = true
-}
+includeConfig 'conf/base.config'
 
-params {
-    ont            = false
-    pe             = false
-    dev            = false
-    devinputs      = 2
-    genomeId       = 'NC_001437'
-    help           = false
-    outfolder      = ""
-    readsfolder    = "."
-    runname        = "jev-analysis"
-    // Although I haven't seen it documented anywhere, 0 is unclassified reads
-    // and 10239 is viral reads
-    taxIdsToKeep    = '0 10239'
-    threads         = 4
-    tracedir        = '.trace'
-    timestamp       = now.format('yyyyMMdd-HH-mm-ss')
-    trimAdapters    = 'NexteraPE-PE.fa'
-    trimMismatches  = 2
-    trimPclip       = 30
-    trimClip        = 10
-    trimWinsize     = 50
-    trimWinqual     = 15
-    trimLeading     = 15
-    trimTrailing    = 15
-    trimCrop        = 0
-    trimHeadcrop    = 0
-    trimMinlen      = 100
-    trimKeepPercent = 90
-    trimTargetBases = 500000000
-    cliquemem       = '10G'
-}
-
+// Enable smart process tracing
+def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
     enabled = true
-    file = "${params.tracedir}/${params.timestamp}_timeline.html"
+    file    = "${params.tracedir}/execution_timeline_${trace_timestamp}.html"
 }
-
 report {
     enabled = true
-    file = "${params.tracedir}/${params.timestamp}_report.html"
+    file    = "${params.tracedir}/execution_report_${trace_timestamp}.html"
 }
-
 trace {
     enabled = true
-    file = "${params.tracedir}/${params.timestamp}_trace.txt"
+    file    = "${params.tracedir}/execution_trace_${trace_timestamp}.txt"
 }
-
 dag {
     enabled = true
-    file = "${params.tracedir}/${params.timestamp}_dag.svg"
+    file    = "${params.tracedir}/pipeline_dag_${trace_timestamp}.svg"
+}
+
+// Function to ensure that resource requirements don't go beyond
+// a maximum limit
+def check_max(obj, type) {
+    if (type == 'memory') {
+        try {
+            if (obj.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1)
+                return params.max_memory as nextflow.util.MemoryUnit
+            else
+                return obj
+        } catch (all) {
+            println "   ### ERROR ###   Max memory '${params.max_memory}' is not valid! Using default value: $obj"
+            return obj
+        }
+    } else if (type == 'time') {
+        try {
+            if (obj.compareTo(params.max_time as nextflow.util.Duration) == 1)
+                return params.max_time as nextflow.util.Duration
+            else
+                return obj
+        } catch (all) {
+            println "   ### ERROR ###   Max time '${params.max_time}' is not valid! Using default value: $obj"
+            return obj
+        }
+    } else if (type == 'cpus') {
+        try {
+            return Math.min( obj, params.max_cpus as int )
+        } catch (all) {
+            println "   ### ERROR ###   Max cpus '${params.max_cpus}' is not valid! Using default value: $obj"
+            return obj
+        }
+    }
 }
