--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,6 @@
         "*variantfilter": "julia",
         "*remove-invalid-reads": "julia",
         "*make-haplotype-fastas": "julia",
-        "nextflow.config": "nextflow"
+        "*.config": "nextflow"
     }
 }
