:wrench: Fix spelling error

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ manifest {
     homePage          = 'https://github.com/MillironX/jev-analysis-pipeline'
     description       = 'Intra-sample viral population analysis targeted at Japanese Encephalitis'
     mainScript        = 'main.nf'
-    nextflowVerion    = '!>=21.04.0'
+    nextflowVersion    = '!>=21.04.0'
     version           = '0.0.1'
     recurseSubmodules = true
 }
