:memo: Rewrite documentation

--- a/nextflow.config
+++ b/nextflow.config
@@ -57,7 +57,7 @@ params {
 
     // Input options
     input          = '.'
-    platform       = null
+    platform       = ''
     pe             = false
     ont            = false
 
