:wrench: Fix parameter names

--- a/nextflow.config
+++ b/nextflow.config
@@ -33,6 +33,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
     }
     singularity {
         singularity.enabled    = true
@@ -41,6 +42,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
     }
     podman {
         podman.enabled         = true
@@ -48,6 +50,7 @@ profiles {
         singularity.enabled    = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
     }
 }
 
@@ -65,7 +68,7 @@ params {
     genome         = 'NC_001437.1' // JEV RefSeq
 
     // Kraken 2 options
-    kraken2_db     = null
+    kraken2_db     = ''
     keep_taxid     = '0 10239' // 0 = Unclassified, 10239 = Viral
 
     // Read trimming options (shared)
@@ -187,6 +190,11 @@ trace {
 dag {
     enabled = true
     file    = "${params.tracedir}/pipeline_dag_${trace_timestamp}.svg"
+}
+
+env {
+    KRAKEN2_DEFAULT_DB = "${params.kraken2_db}"
+    KRAKEN2_DB_PATH    = "${params.kraken2_db}"
 }
 
 // Function to ensure that resource requirements don't go beyond
