:muscle: Auto-bind kraken2 database

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,39 +22,6 @@ manifest {
     recurseSubmodules = true
 }
 
-
-// Configuration profiles for
-profiles {
-    debug { process.beforeScript = 'echo $HOSTNAME' }
-    docker {
-        docker.enabled         = true
-        docker.userEmulation   = true
-        singularity.enabled    = false
-        podman.enabled         = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
-    }
-    singularity {
-        singularity.enabled    = true
-        singularity.autoMounts = true
-        docker.enabled         = false
-        podman.enabled         = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
-    }
-    podman {
-        podman.enabled         = true
-        docker.enabled         = false
-        singularity.enabled    = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
-    }
-}
-
-
 // Global default parameters
 params {
 
@@ -113,6 +80,37 @@ else if ( params.platform.toLowerCase() == 'pe' || params.platform.toLowerCase()
     params.ont = false
 }
 
+// Configuration profiles for
+profiles {
+    debug { process.beforeScript = 'echo $HOSTNAME' }
+    docker {
+        docker.enabled         = true
+        docker.userEmulation   = true
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
+    }
+    singularity {
+        singularity.enabled    = true
+        singularity.autoMounts = true
+        singularity.runOptions = "--bind ${params.kraken2_db}"
+        docker.enabled         = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
+    }
+    podman {
+        podman.enabled         = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
+    }
+}
 
 process {
 // Per-process container environments
