containers: Fix Kraken2 database mounting for docker and podman
6b0b03f7bc2d ("Auto-bind kraken2 database") only bound the Kraken2 database
when using the `-profile singularity` option. Docker and Podman use a
different syntax. Update the appropriate profiles to utilize that syntax
and automatically bind the Kraken2 database when using those engines.

Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -86,6 +86,7 @@ profiles {
     docker {
         docker.enabled         = true
         docker.userEmulation   = true
+        docker.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro"
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
@@ -104,6 +105,7 @@ profiles {
     }
     podman {
         podman.enabled         = true
+        podman.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro"
         docker.enabled         = false
         singularity.enabled    = false
         shifter.enabled        = false
