linting: Alter gitignore to match nf-core
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
-#### Visual Studio Code gitignore ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
-
-# Local History for Visual Studio Code
-.history/
-
-### Nextflow gitignore ###
 .nextflow*
-work
-pipeline_info
+work/
+data/
+results/
+.DS_Store
+testing/
+testing*
+*.pyc
 
 ### Bio gitignore ###
 *.sam
