test: Add GitHub actions testing suite
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,6 +27,7 @@ params {
 
     // Input options
     input          = '.'
+    sra            = false
     platform       = ''
     pe             = false
     ont            = false
@@ -113,6 +114,7 @@ profiles {
         charliecloud.enabled   = false
         envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
     }
+    test { includeConfig 'conf/test.config' }
 }
 
 process {
