test: Add `workflow_dispatch` to list of conditions to run tests in actions
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
 name: nf-core CI
 # This workflow runs the pipeline with the minimal test dataset to check that it completes without any syntax errors
-on:  release
+on:
+  - release
+  - workflow_dispatch
 
 # Uncomment if we need an edge release of Nextflow again
 env:
