--- a/conf/test.config
+++ b/conf/test.config
@@ -6,6 +6,8 @@ params {
     input       = 'SRX1565330'
     sra         = true
     platform    = 'illumina'
+    pe          = true
+    ont         = false
     keep_taxid  = '10239'
     kraken2_db  = 'kraken2db'
 }
