--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,10 @@ jobs:
     env:
       NXF_VER: ${{ matrix.nxf_ver }}
       NXF_ANSI_LOG: false
-      NXF_PROFILE: ${{ matrix.nxf_profile }}
     strategy:
       matrix:
         # Nextflow versions: check pipeline minimum and current latest
         nxf_ver: ['21.04.3', '']
-        nxf_profile: ['docker', 'singularity', 'podman']
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
@@ -44,4 +42,4 @@ jobs:
         # For example: adding multiple test runs with different parameters
         # Remember that you can parallelise this by using strategy.matrix
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test,${NXF_PROFILE}
+          nextflow run ${GITHUB_WORKSPACE} -profile test,docker
