--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,21 +4,25 @@ on:
   - release
   - workflow_dispatch
 
-# Uncomment if we need an edge release of Nextflow again
-env:
-  NXF_EDGE: 1
-
 jobs:
   test:
     name: Run workflow tests
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
     env:
       NXF_VER: ${{ matrix.nxf_ver }}
+      NXF_EDGE: ${{ matrix.nxf_edge }}
       NXF_ANSI_LOG: false
     strategy:
       matrix:
         # Nextflow versions: check pipeline minimum and current latest
         nxf_ver: ['21.04.3', '']
+        nxf_edge: ['', '1']
+        experimental: [false]
+        include:
+          - nxf_ver: '21.04.3'
+          - nxf_edge: ''
+          - experimental: true
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
