docs, ci: Fix parameter name for docs deployment in ci workflow
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,4 +20,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: gh-pages
-          dir_docs: docs/_build
+          folder: docs/_build
