parameterization: Add customization of error-related canu parameters
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -58,6 +58,12 @@ params {
     trim_keep_percent = 90
     trim_target_bases = 500000000
 
+    // Canu ONT assembly options
+    canu_corrected_error_rate = 0.144
+    canu_min_read_length      = 1000
+    canu_min_overlap_length   = params.canu_min_read_length / 2
+    canu_stop_on_low_coverage = 10
+
     // Boilerplate options
     outdir           = './results'
     tracedir         = "${params.outdir}/.trace"
