parameterization: Allow usage of different SPAdes assembly modes
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -64,6 +64,9 @@ params {
     canu_min_overlap_length   = params.canu_min_read_length / 2
     canu_stop_on_low_coverage = 10
 
+    // SPAdes Illumina assembly options
+    spades_mode = 'rnaviral'
+
     // Boilerplate options
     outdir           = './results'
     tracedir         = "${params.outdir}/.trace"
