--- a/conf/test.config
+++ b/conf/test.config
@@ -3,7 +3,7 @@ params {
     max_memory = 6.GB
     max_time   = 6.h
 
-    input       = 'SRX1565330'
+    input       = 'ERP123013'
     sra         = true
     platform    = 'illumina'
     pe          = true
