--- a/nextflow.config
+++ b/nextflow.config
@@ -78,6 +78,9 @@ params {
     max_memory                   = '750.GB'
     max_cpus                     = 72
     max_time                     = '240.h'
+
+    // Step-skipping options
+    skip_filtering    = false
 }
 
 // Set the platform flags correctly
