organization: Move assembly alignment process to assembly subworkflow
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -81,6 +81,7 @@ params {
 
     // Step-skipping options
     skip_filtering    = false
+    skip_assembly     = false
 }
 
 // Set the platform flags correctly
