--- a/nextflow.config
+++ b/nextflow.config
@@ -82,6 +82,7 @@ params {
     // Step-skipping options
     skip_filtering    = false
     skip_assembly     = false
+    skip_haplotype    = false
 }
 
 // Set the platform flags correctly
