output: Add MultiQC support and Trimmomatic report to it
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -167,6 +167,9 @@ process {
     withLabel: minimap {
         container = 'docker.io/niemasd/minimap2_samtools:2.22_1.12'
     }
+    withLabel: multiqc {
+        container = 'docker.io/ewels/multiqc:v1.11'
+    }
     withLabel: raxml {
         container = 'docker.io/evolbioinfo/raxml-ng:v1.0.3'
     }
