parameterization: Use appropriate Trimmomatic parameters with Filtlong
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -40,15 +40,15 @@ params {
     keep_taxid     = '0 10239' // 0 = Unclassified, 10239 = Viral
 
     // Read trimming options (shared)
-    trim_minlen      = 100
+    trim_minlen      = (params.pe) ? 100 : 300
+    trim_winsize     = (params.pe) ? 50 : 250
+    trim_winqual     = (params.pe) ? 15 : 90
 
     // Illumina trimming options (Trimmomatic)
     trim_adapters    = 'NexteraPE-PE.fa'
     trim_mismatches  = 2
     trim_pclip       = 30
     trim_clip        = 10
-    trim_winsize     = 50
-    trim_winqual     = 15
     trim_leading     = 15
     trim_trailing    = 15
     trim_crop        = 0
