parameterization: Initialize --pe and --ont params in inital declaration
Several downstream parameters require the --pe or --ont flags to be set.
The implementation of df8697f236cc ("Make parameters function more like
nf-core") set the flags _after_ all other parameters were already set. This
caused problems in e05f1b7a5611 ("parameterization: Use appropriate
Trimmomatic parameters with Filtlong") when the flags were called on to
determine very different forms of trimming parameters. Use boolean
expressions to set these flags correctly from the get-go.

Fixes: e05f1b7a5611 ("parameterization: Use appropriate Trimmomatic parameters with Filtlong")
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,8 +29,8 @@ params {
     input          = '.'
     sra            = false
     platform       = ''
-    pe             = false
-    ont            = false
+    pe             = (params.platform == 'pe'  || params.platform == 'illumina')
+    ont            = (params.platform == 'ont' || params.platform == 'nanopore')
 
     // Reference genome options
     genome         = 'NC_001437.1' // JEV RefSeq
@@ -83,16 +83,6 @@ params {
     skip_filtering    = false
     skip_assembly     = false
     skip_haplotype    = false
-}
-
-// Set the platform flags correctly
-if ( params.platform.toLowerCase() == 'ont' || params.platform.toLowerCase() =='nanopore' ) {
-    params.pe  = false
-    params.ont = true
-}
-else if ( params.platform.toLowerCase() == 'pe' || params.platform.toLowerCase() == 'illumina' ) {
-    params.pe  = true
-    params.ont = false
 }
 
 // Configuration profiles for
