parameterization: Add parameters for linkage statistic criteria
The Julia `haplotype-finder` script has had its arbitrary haplotyping
criteria exposed via ArgParse since a349965b3513 ("Give haplotype finder
proper argument parsing"). Expose these criteria to the pipeline user via
global command-line parameters.

Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -67,6 +67,10 @@ params {
     // SPAdes Illumina assembly options
     spades_mode = 'rnaviral'
 
+    // Haplotyping options
+    haplotype_significance = 0.05
+    haplotype_minimum      = 10
+
     // Boilerplate options
     outdir           = './results'
     tracedir         = "${params.outdir}/.trace"
