generalization: Format haplotype output for multi-dimensional results
Since cb2b3284cc9d ("Switch to using type-based function calls instead of
dataframe manipulation"), the haplotype-finder script has output a TSV of
the linkage haplotype occurrences and the linkage disequilibrium
statistics. This file was formatted in a rigid 2-D structure that could not
be updated to multi-dimensional haplotype searching, so drop it from the
script, and update the pipeline to get along without it.

Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,12 +18,19 @@
         {
             "type": "julia",
             "request": "launch",
-            "name": "Run find-variant-reads",
+            "name": "Launch haplotype-finder",
             "program": "${file}",
             "stopOnEntry": false,
             "cwd": "${workspaceFolder}",
             "juliaEnv": "${command:activeJuliaEnvironment}",
-            "args": ["2fab.bam", "2fab.ivar.tsv", "2fab.matrix.csv"]
+            "args": [
+                "data/sample.bam",
+                "data/sample.tsv",
+                "data/sample.haplotypes.csv",
+                "data/sample.haplotypes.yaml",
+                "-p 1.0",
+                "-m 1"
+            ]
         }
     ]
 }
