--- a/nextflow.config
+++ b/nextflow.config
@@ -100,7 +100,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
+        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
     }
     singularity {
         singularity.enabled    = true
@@ -110,7 +110,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
+        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
     }
     podman {
         podman.enabled         = true
@@ -120,7 +120,7 @@ profiles {
         singularity.enabled    = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH'
+        envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
     }
     test { includeConfig 'conf/test.config' }
 }
