performance: Allow repeating of server overloading processes
Processes that retrieve data from NCBI servers can fail due to submitting
too many requests within a time limit. Implement the cooldown noted in the
Nextflow documentation to prevent this from ending the entire pipeline.

Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/base.config
+++ b/conf/base.config
@@ -47,4 +47,8 @@ process {
         errorStrategy = 'retry'
         maxRetries    = 4
     }
+    withLabel: error_backoff {
+        errorStrategy = { sleep(Math.pow(2, task.attempt) * 200 as long); return 'retry' }
+        maxRetries    = 4
+    }
 }
