ci: Bootstrap more complete testing infrastructure based on simulated reads
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -122,7 +122,8 @@ profiles {
         charliecloud.enabled   = false
         envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
     }
-    test { includeConfig 'conf/test.config' }
+    testpe  { includeConfig 'conf/test_pe.config' }
+    testont { includeConfig 'conf/test_ont.config' }
 }
 
 process {
