--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,28 @@ jobs:
       NXF_VER: ${{ matrix.nxf_ver }}
       NXF_EDGE: ${{ matrix.nxf_edge }}
       NXF_ANSI_LOG: false
+      RUN_CONTAINER: ${{ matrix.container_env }}
+      RUN_READTYPE: ${{ matrix.read_type }}
+      RUN_SKIPPING: ${{ matrix.skipping }}
     strategy:
       matrix:
         # Nextflow versions: check pipeline minimum and current latest
-        nxf_ver: ['21.04.3', '']
+        nxf_ver: ['20.10.0', '']
         nxf_edge: ['', '1']
+        container_env: ['docker', 'singularity', 'podman']
+        read_type: ['ont', 'pe']
+        skipping: ['', '--skip_filtering', '--skip_assembly', '--skip_haplotype']
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
+
+      - name: Install Singularity
+        uses: eWaterCycle/setup-singularity@v6
+
+      - name: Install Podman
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install podman
 
       - name: Get a kraken database
         run: |
@@ -45,4 +59,4 @@ jobs:
         # For example: adding multiple test runs with different parameters
         # Remember that you can parallelise this by using strategy.matrix
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test,docker
+          nextflow run ${GITHUB_WORKSPACE} -profile test${RUN_READTYPE},${RUN_CONTAINER} $RUN_SKIPPING
