ci: Update Kraken2 database location
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/test_pe.config
+++ b/conf/test_pe.config
@@ -9,7 +9,7 @@ params {
     pe           = true
     ont          = false
     keep_taxid   = '10239'
-    kraken2_db   = './kraken2db'
+    kraken2_db   = '/kraken2-db'
     trim_minlen  = 100
     trim_winsize = 50
     trim_winqual = 15
