--- a/conf/test_ont.config
+++ b/conf/test_ont.config
@@ -10,7 +10,7 @@ params {
     pe           = false
     ont          = true
     keep_taxid   = '10239'
-    kraken2_db   = './kraken2db'
+    kraken2_db   = '/kraken2-db'
     canu_corrected_error_rate = 0.2
     canu_min_read_length      = 300
     canu_min_overlap_length   = 100
