--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ jobs:
     continue-on-error: true
     env:
       NXF_VER: ${{ matrix.nxf_ver }}
-      NXF_EDGE: ${{ matrix.nxf_edge }}
       NXF_ANSI_LOG: false
       RUN_CONTAINER: ${{ matrix.container_env }}
       RUN_READTYPE: ${{ matrix.read_type }}
@@ -19,8 +18,7 @@ jobs:
     strategy:
       matrix:
         # Nextflow versions: check pipeline minimum and current latest
-        nxf_ver: ['20.10.0', '']
-        nxf_edge: ['', '1']
+        nxf_ver: ['20.10.0', 'latest', 'edge']
         container_env: ['docker', 'singularity', 'podman']
         read_type: ['ont', 'pe']
         skipping: ['', '--skip_filtering', '--skip_assembly', '--skip_haplotype']
@@ -45,9 +43,15 @@ jobs:
         env:
           CAPSULE_LOG: none
         run: |
-          export NXF_VER
-          export NXF_EDGE
-          echo $NXF_VER $NXF_EDGE
+          if [ "$NXF_VER" == "edge" ]; then
+            export NXF_VER=''
+            export NXF_EDGE=1
+          elif [ "$NXF_VER" == "latest" ]; then
+            export NXF_VER=''
+          else
+            export NXF_VER
+          fi
+          export NXF_ANSI_LOG
           wget -qO- get.nextflow.io | bash
           sudo mv nextflow /usr/local/bin/
           nextflow self-update
@@ -59,4 +63,5 @@ jobs:
         # For example: adding multiple test runs with different parameters
         # Remember that you can parallelise this by using strategy.matrix
         run: |
+          export NXF_ANSI_LOG
           nextflow run ${GITHUB_WORKSPACE} -profile test${RUN_READTYPE},${RUN_CONTAINER} $RUN_SKIPPING
