--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@ jobs:
   test:
     name: Run workflow tests
     runs-on: ubuntu-latest
-    continue-on-error: true
+    continue-on-error: ${{ matrix.nxf_edge == 1 }}
     env:
-      NXF_VER: ${{ format(matrix.nxf_ver, '') }}
-      NXF_EDGE: ${{ matrix.nxf_ver == '{0}' }}
+      NXF_VER: ${{ matrix.nxf_ver }}
+      NXF_EDGE: ${{ matrix.nxf_edge }}
       NXF_ANSI_LOG: false
       RUN_CONTAINER: ${{ matrix.container_env }}
       RUN_READTYPE: ${{ matrix.read_type }}
@@ -19,10 +19,22 @@ jobs:
     strategy:
       matrix:
         # Nextflow versions: check pipeline minimum and current latest
-        nxf_ver: ['20.10.0', '', '{0}']
+        nxf_ver: ['20.10.0', '']
+        nxf_edge: [ '' ]
         container_env: ['docker', 'singularity', 'podman']
         read_type: ['ont', 'pe']
         skipping: ['', '--skip_filtering', '--skip_assembly', '--skip_haplotype']
+        include:
+          - nxf_ver: ''
+            nxf_edge: 1
+            container_env: docker
+            skipping: ''
+            read_type: ont
+          - nxf_ver: ''
+            nxf_edge: 1
+            container_env: docker
+            skipping: ''
+            read_type: pe
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
