ci: Ensure Kraken2 database is mounted for containers
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/test_ont.config
+++ b/conf/test_ont.config
@@ -16,6 +16,10 @@ params {
     canu_min_overlap_length   = 100
     canu_stop_on_low_coverage = 3
     haplotype_minimum         = 1
+    envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
+    docker.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro"
+    singularity.runOptions = "--bind ${params.kraken2_db}"
+    podman.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro,z"
 }
 
 process {
