--- a/conf/test_pe.config
+++ b/conf/test_pe.config
@@ -13,6 +13,10 @@ params {
     trim_minlen  = 100
     trim_winsize = 50
     trim_winqual = 15
+    envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
+    docker.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro"
+    singularity.runOptions = "--bind ${params.kraken2_db}"
+    podman.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro,z"
 }
 
 process {
