ci: Hard-code Kraken2 database location into testing configs
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/test_pe.config
+++ b/conf/test_pe.config
@@ -14,9 +14,9 @@ params {
     trim_winsize = 50
     trim_winqual = 15
     envWhitelist           = 'KRAKEN2_DEFAULT_DB,KRAKEN2_DB_PATH,NCBI_API_KEY'
-    docker.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro"
-    singularity.runOptions = "--bind ${params.kraken2_db}"
-    podman.runOptions      = "-v ${params.kraken2_db}:${params.kraken2_db}:ro,z"
+    docker.runOptions      = "-v /kraken2_db:/kraken2_db:ro"
+    singularity.runOptions = "--bind /kraken2_db"
+    podman.runOptions      = "-v /kraken2_db:/kraken2_db:ro,z"
 }
 
 process {
