--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,11 @@ jobs:
       RUN_SKIPPING: ${{ matrix.skipping }}
     strategy:
       matrix:
-        # Nextflow versions: check pipeline minimum and current latest
         nxf_ver: ['20.10.0', '']
         nxf_edge: [ '' ]
         container_env: ['docker', 'singularity', 'podman']
         read_type: ['ont', 'pe']
-        skipping: ['', '--skip_filtering', '--skip_assembly', '--skip_haplotype']
+        skipping: [ '' ]
         include:
           - nxf_ver: ''
             nxf_edge: 1
@@ -35,6 +34,36 @@ jobs:
             container_env: docker
             skipping: ''
             read_type: pe
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
+            skipping: '--skip_filtering'
+            read_type: pe
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
+            skipping: '--skip_filtering'
+            read_type: ont
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
+            skipping: '--skip_assembly'
+            read_type: pe
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
+            skipping: '--skip_assembly'
+            read_type: ont
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
+            skipping:  '--skip_haplotype'
+            read_type: pe
+          - nxf_ver: ''
+            nxf_edge: ''
+            container_env: docker
+            skipping: '--skip_haplotype'
+            read_type: ont
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
