--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,8 @@ jobs:
 
       - name: Install Singularity
         uses: eWaterCycle/setup-singularity@v6
+        with:
+          singularity-version: 3.7.1
 
       - name: Install Podman
         run: |
