--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,11 +69,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Singularity
+        if: ${{ env.RUN_CONTAINER == 'singularity' }}
         uses: eWaterCycle/setup-singularity@v6
         with:
           singularity-version: 3.7.1
 
       - name: Install Podman
+        if: ${{ env.RUN_CONTAINER == 'podman' }}
         run: |
           sudo apt-get update
           sudo apt-get -y install podman
