--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,14 +88,21 @@ jobs:
           sudo mv nextflow /usr/local/bin/
           [ -n $NXF_EDGE ] && nextflow self-update
 
-      - name: Run pipeline with test data
-        env:
-          NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
-        # TODO nf-core: You can customise CI pipeline run tests as required
-        # For example: adding multiple test runs with different parameters
-        # Remember that you can parallelise this by using strategy.matrix
+      - name: Cache Kraken2 database
+        id: kraken2db-cache
+        uses: actions/cache@v2
+        with:
+          path: /kraken2-db
+          key: kraken2db-${{ hashFiles('/kraken2-db/inspect.txt') }}
+
+      - name: Download Kraken2 database
+        if: ${{ steps.kraken2db-cache.outputs.cache-hit != 'true' }}
         run: |
           sudo mkdir /kraken2-db
           wget -qO- https://genome-idx.s3.amazonaws.com/kraken/k2_viral_20210517.tar.gz | sudo tar xzv -C /kraken2-db
-          ls -lh /kraken2-db
+
+      - name: Run pipeline with test data
+        env:
+          NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
+        run: |
           nextflow run ${GITHUB_WORKSPACE} -profile test${RUN_READTYPE},${RUN_CONTAINER} $RUN_SKIPPING --kraken2_db /kraken2-db
