ci: Use different simulators for Illumina and Nanopore read generation
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -165,6 +165,9 @@ process {
     withLabel: multiqc {
         container = 'docker.io/ewels/multiqc:v1.11'
     }
+    withLabel: nanosim {
+        conda   = 'python=3.6 bioconda::nanosim=3.0.2 conda-forge::scikit-learn=0.21.3'
+    }
     withLabel: raxml {
         container = 'docker.io/evolbioinfo/raxml-ng:v1.0.3'
     }
