--- a/conf/test_ont.config
+++ b/conf/test_ont.config
@@ -11,6 +11,11 @@ params {
     ont          = true
     keep_taxid   = '10239'
     kraken2_db   = '/kraken2-db'
+    trim_minlen      = 50
+    trim_winsize     = 250
+    trim_winqual     = 50
+    trim_keep_percent = 99
+    trim_target_bases = 50000000000
     canu_corrected_error_rate = 0.2
     canu_min_read_length      = 300
     canu_min_overlap_length   = 100
