--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "igv": "^2.10.1"
   }
 }
