visualizer: Switch to locally-hosted JQuery
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "igv": "^2.10.1"
+    "igv": "^2.10.1",
+    "jquery": "^3.6.0"
   }
 }
