visualizer: Switch to locally-hosted BigInteger
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "big-integer": "^1.6.49",
     "express": "^4.17.1",
     "igv": "^2.10.1",
     "jquery": "^3.6.0"
