visualizer: Switch to locally-hosted UnderscoreJS
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -12,6 +12,7 @@
     "big-integer": "^1.6.49",
     "express": "^4.17.1",
     "igv": "^2.10.1",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "underscore": "^1.13.1"
   }
 }
