--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "igv": "^2.10.1",
     "jquery": "^3.6.0",
+    "spin.js": "^2.3.2",
     "underscore": "^1.13.1"
   }
 }
