--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -14,6 +14,7 @@
     "circular-json": "^0.5.9",
     "d3": "^3.5.17",
     "express": "^4.17.1",
+    "file-saver": "^1.3.8",
     "igv": "^2.10.1",
     "jquery": "^3.6.0",
     "spin.js": "^2.3.2",
