--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "big-integer": "^1.6.49",
+    "bootstrap": "^3.4.1",
     "canvas-toBlob": "^1.0.0",
     "circular-json": "^0.5.9",
     "d3": "^3.5.17",
