--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -18,6 +18,7 @@
     "file-saver": "^1.3.8",
     "igv": "^2.10.1",
     "jquery": "^3.6.0",
+    "pug": "^3.0.2",
     "spin.js": "^2.3.2",
     "underscore": "^1.13.1"
   }
