bug: Use conda for MultiQC
When running under podman, depending on the working directory, sometimes
copying the container doesn't have permission to copy the config file.
Bypass containers entirely to avoid that, as a Python-based application
should be safe to run under conda.

Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -163,7 +163,7 @@ process {
         container = 'docker.io/niemasd/minimap2_samtools:2.22_1.12'
     }
     withLabel: multiqc {
-        container = 'docker.io/ewels/multiqc:v1.11'
+        conda   = '-c bioconda -c conda-forge multiqc=1.11'
     }
     withLabel: nanosim {
         conda   = 'python=3.6 bioconda::nanosim=3.0.2 conda-forge::scikit-learn=0.21.3'
