--- a/nextflow.config
+++ b/nextflow.config
@@ -1,24 +1,20 @@
 /*
 ====================================================================================
-
-    MillironX/jev-analysis-pipeline Nextflow config file
-
+    jev-analysis-pipeline Nextflow config file
 ====================================================================================
-
     Default config options for all compute environments
-
 ------------------------------------------------------------------------------------
 */
 
 // Process metadata
 manifest {
-    name              = 'MillironX/jev-analysis-pipeline'
+    name              = 'jev-analysis-pipeline'
     author            = 'Thomas A. Christensen II'
     homePage          = 'https://github.com/MillironX/jev-analysis-pipeline'
     description       = 'Intra-sample viral population analysis targeted at Japanese Encephalitis'
     mainScript        = 'main.nf'
     nextflowVersion    = '>=20.10.0'
-    version           = '0.0.1'
+    version           = '0.1.0-alpha'
     recurseSubmodules = true
 }
 
