--- a/bin/Project.toml
+++ b/bin/Project.toml
@@ -11,5 +11,6 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 GenomicFeatures = "899a7d2d-5c61-547b-bef9-6698a8d05446"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 XAM = "d759349c-bcba-11e9-07c2-5b90f8f05f7c"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
